# Video-Notes

LearningNotes/MPI/: MPI程序设计(1)—并行计算机概念.md  MPI程序设计(2)—认识MPI子函数.md  【MPI学习笔记】点对点通信.md
LearningNotes/SPH/: SPH-01 绪论.md  SPH-02 SPH方法基本原理.md
LearningNotes/SPH/Math_process/: 2.3节-辅助函数的性质.nb
LearningNotes/SPH/sourceCode/: CMakeLists.txt
LearningNotes/SPH/sourceCode/SPH-02-FDM/: CMakeLists.txt  main.cpp
随笔类/: 如何采用VScode插件撰写知乎文章.md
